# jGL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  DOCUMENTATION_8md.html  README.md  annotated.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  build.sh  classPriorityStore-members.html  classPriorityStore.html  classes.html  classjGL_1_1DesktopDisplay-members.html  classjGL_1_1DesktopDisplay.html  classjGL_1_1DesktopDisplay__coll__graph.map  classjGL_1_1DesktopDisplay__coll__graph.md5  classjGL_1_1DesktopDisplay__inherit__graph.map  classjGL_1_1DesktopDisplay__inherit__graph.md5  classjGL_1_1Display-members.html  classjGL_1_1Display.html  classjGL_1_1Display__inherit__graph.map  classjGL_1_1Display__inherit__graph.md5  classjGL_1_1Font-members.html  classjGL_1_1Font.html  classjGL_1_1Font__inherit__graph.map  classjGL_1_1Font__inherit__graph.md5  classjGL_1_1GL_1_1GLRuntimeException-members.html  classjGL_1_1GL_1_1GLRuntimeException.html  classjGL_1_1GL_1_1GLRuntimeException__coll__graph.map  classjGL_1_1GL_1_1GLRuntimeException__inherit__graph.md5  classjGL_1_1GL_1_1OpenGLInstance-members.html  (+1124 more)
.github/workflows/: build-tests.yml  ci-builds.yml  doc.yml  docs.yml  release.yml  run-tests.yml  unit-tests.yml
doc/: doxygen.config
docs/: doxygen.config
examples/: CMakeLists.txt
examples/Imgui/: CMakeLists.txt  main.cpp  main.h
examples/Particles/: CMakeLists.txt  dynamics.cpp  dynamics.h  main.cpp  main.h  rand.cpp  rand.h  toy.h
examples/Shape/: CMakeLists.txt  main.cpp  main.h
examples/Sprite/: CMakeLists.txt  main.cpp  main.h
examples/SpriteBenchmark/: CMakeLists.txt  main.cpp  main.h
include/: colourMap.h  log.h  logo.h  main.h  threadPool.h  toy.h
include/Util/: util.h
include/jGL/: font.h  jGL.h  orthoCam.h  particles.h  primitive.h  priorityStore.h  shader.h  shape.h  shapeRenderer.h  sprite.h  spriteRenderer.h  texture.h  util.h  warning.h
include/jGL/Display/: desktopDisplay.h  display.h  event.h
include/jGL/OpenGL/: gl.h  glDrawFramebuffer.h  glParticles.h  glShapeRenderer.h  glSpriteRenderer.h  openGLInstance.h
include/jGL/OpenGL/Shader/: glShader.h
include/jGL/OpenGL/Text/: font.h  glTextRenderer.h  glyph.h  popup.h  textRenderer.h  type.h  typeUtils.h
include/jGL/OpenGL/Texture/: glTexture.h
include/jGL/Vulkan/: buffer.h  debug.h  pipeline.h  swapchain.h  vkParticles.h  vkShapeRenderer.h  vkSpriteRenderer.h  vulkanInstance.h
include/jGL/Vulkan/Command/: command.h
include/jGL/Vulkan/Descriptor/: descriptorSets.h
include/jGL/Vulkan/Device/: logicalDevice.h  physicalDevice.h
include/jGL/Vulkan/RenderPass/: renderPass.h
include/jGL/Vulkan/Shader/: vertexBuffer.h  vkShader.h
include/jGL/Vulkan/Text/: font.h  glyph.h  textRenderer.h  vkTextRenderer.h
include/jGL/Vulkan/Texture/: vkSampler.h  vkTexture.h
script/util/: dumpbyteArray.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+88 more)
src/: dynamics.cpp  id.cpp  log.cpp  main.cpp
src/Util/: util.cpp
src/jGL/: common.cpp  font.cpp  glyph.cpp  primitive.cpp  shader.cpp  shapeRenderer.cpp  spriteRenderer.cpp  warning.cpp
src/jGL/Display/: desktopDisplay.cpp  display.cpp  event.cpp
src/jGL/OpenGL/: gl.cpp  glDrawFramebuffer.cpp  glParticles.cpp  glShapeRenderer.cpp  glSpriteRenderer.cpp  openGLInstance.cpp
src/jGL/OpenGL/Shader/: glShader.cpp
src/jGL/OpenGL/Text/: font.cpp  glFont.cpp  glTextRenderer.cpp  popup.cpp  textRenderer.cpp  type.cpp  typeUtils.cpp
src/jGL/OpenGL/Texture/: glTexture.cpp
src/jGL/Vulkan/: buffer.cpp  debug.cpp  framebuffer.cpp  pipeline.cpp  swapchain.cpp  vulkanInstance.cpp
src/jGL/Vulkan/Command/: commandBuffer.cpp  commandPool.cpp
src/jGL/Vulkan/Device/: device.cpp  logicalDevice.cpp  physicalDevice.cpp
src/jGL/Vulkan/RenderPass/: renderPass.cpp
src/jGL/Vulkan/Shader/: vkShader.cpp
src/jGL/Vulkan/Text/: font.cpp  glyph.cpp  textRenderer.cpp  vkFont.cpp  vkTextRenderer.cpp
src/jGL/Vulkan/Texture/: vkTexture.cpp
tests/glTests/: test.cpp
tests/regression/: main.cpp
tests/regression/user/: CMakeLists.txt  main.cpp  main.h  rand.h
tests/regression/user-macos/: CMakeLists.txt  main.cpp  rand.cpp
tests/regression/user-mingw/: CMakeLists.txt  build.sh  main.cpp
tests/regression/user-mingw/resources/: config.lua  mix.lua  tile.hmap
tests/unitTests/: test.cpp
tests/vulkanTests/: test.cpp
